@@ -194,6 +194,7 @@ move-to-this-stage=Move to this stage
 
 reset-train=Reset train
 set-train-location-here=Set train location here
+delete-entity=Force delete entity
 
 stage-diff=Stage changes
 reset-prop=Reset
